--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>KaiGPT & SAFI — Knowing.AI</title>
+<link rel="stylesheet" href="style.css">
 <meta name="description" content="SAFI — Egypt's bilingual AI assistant for the Grand Egyptian Museum." />
 <style>
   /* (kept compact) basic styling adapted from your original - responsive, dark/light */
